# qrcode

./: Makefile.am  config.h.in  configure  configure.ac  jpeg  make.sh
autom4te.cache/: output.1  traces.0  traces.1
qinya/: barcodeservice_linux_IF.h
server/: Domain.h  SafeList.h  Server.h  lock.h
src/: Makefile.am  Makefile.in  jpeg2bmp.c  jpeg2bmp.h  main.c  qrdecode.c  qrdecode.h  v4l2.c  v4l2.h
